migrateFull/objects/Child__c.object
<CustomObject>
    <description>Sample child to account</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Parent Account</description>
        <inlineHelpText></inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description></description>
        <inlineHelpText></inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description></description>
        <inlineHelpText></inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Femaile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Child</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Child Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>